# youtube-ai-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/codex-patch/: part-aa  part-ab  part-ac  part-ad  part-ae  part-af  visual-fix.patch.gz.b64
.github/workflows/: apply-codex-pipeline-patch.yml  apply-codex-visual-fix.yml
examples/: 01-tech-news-short.md  02-free-draft-discovery.md
niches/: conspiracy.yaml  horror.yaml
tests/: test_assemble.py  test_broll.py  test_captions.py  test_config.py  test_draft.py  test_litellm.py  test_music.py  test_thumbnail.py  test_tts.py
verticals/: __init__.py  __main__.py  assemble.py  broll.py  captions.py  config.py  draft.py  llm.py  music.py  niche.py  state.py  thumbnail.py  tts.py
