[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verticals"
version = "3.1.0"
description = "AI-native vertical video engine with niche intelligence"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0,<1.0",
    "requests>=2.31.0,<3.0",
    "Pillow>=10.0.0,<11.0",
    "feedparser>=6.0.0,<7.0",
    "google-api-python-client>=2.100.0,<3.0",
    "google-auth>=2.23.0,<3.0",
    "google-auth-oauthlib>=1.1.0,<2.0",
    "openai-whisper>=20231117",
    "PyYAML>=6.0,<7.0",
    "edge-tts>=7.0,<8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[tool.setuptools.packages.find]
include = ["verticals*"]
